# athena-code

./: .gitignore  README.md
bringup/: CMakeLists.txt  package.xml
hardware_interfaces/rmd_ros2_control/: CMakeLists.txt  package.xml  rmd_hardware_interface.xml
hardware_interfaces/rmd_ros2_control/include/rmd_ros2_control/: rmd_hardware_interface.hpp
hardware_interfaces/rmd_ros2_control/src/: rmd_hardware_interface.cpp
hardware_interfaces/smc_ros2_control/: CMakeLists.txt  package.xml  smc_hardware_interface.xml
hardware_interfaces/smc_ros2_control/include/smc_ros2_control/: smc_hardware_interface.hpp
hardware_interfaces/smc_ros2_control/src/: smc_hardware_interface.cpp
hardware_interfaces/talon_ros2_control/: CMakeLists.txt  package.xml  talon_hardware_interface.xml
hardware_interfaces/talon_ros2_control/include/talon_ros2_control/: talon_control.cpp  talon_control.h  talon_hardware_interface.hpp
hardware_interfaces/talon_ros2_control/include/talon_ros2_control/ctre/: Phoenix.h
hardware_interfaces/talon_ros2_control/src/: talon_hardware_interface.cpp
msgs/: CMakeLists.txt  package.xml
src/bringup/: CMakeLists.txt  package.xml
src/bringup/scripts/: controller_switcher.py
src/description/: package.xml
src/description/config/: athena_drive_controllers.yaml  athena_drive_sim_controllers.yaml
src/description/launch/: display.launch.py
src/description/models/terrain_world/: model.config  model.sdf
src/description/ros2_control/arm/: arm.servo.ros2_control.xacro
src/description/ros2_control/drive/: drive.odrive.ros2_control.xacro  drive.rmd.ros2_control.xacro
src/description/ros2_control/science/: science.mock.ros2_control.xacro  science.servo.ros2_control.xacro  science.stepper.ros2_control.xacro  science.talon.ros2_control.xacro
src/description/rviz/: athena_drive.rviz
src/description/urdf/: athena_arm.urdf.xacro  athena_drive.urdf.xacro  athena_drive_description.urdf.xacro  athena_science.urdf.xacro  athena_science_macro.xacro
src/description/urdf/athena_drive/: athena_drive_macro.ros2_control.xacro  athena_drive_macro.xacro
src/description/worlds/: terrain_world.sdf
src/hardware_interfaces/servo_ros2_control/: CMakeLists.txt  package.xml  servo_hardware_interface.xml
src/hardware_interfaces/servo_ros2_control/include/servo_ros2_control/: servo_hardware_interface.hpp
src/hardware_interfaces/servo_ros2_control/src/: servo_hardware_interface.cpp
src/hardware_interfaces/stepper_ros2_control/: CMakeLists.txt  package.xml  stepper_hardware_interface.xml
src/hardware_interfaces/stepper_ros2_control/include/stepper_ros2_control/: stepper_hardware_interface.hpp
src/hardware_interfaces/stepper_ros2_control/src/: stepper_hardware_interface.cpp
src/simulation/: CMakeLists.txt  package.xml
src/simulation/launch/: bringup.launch.py  sim_bringup.launch.py  spawn.launch.py
src/subsystems/drive/drive_bringup/: CMakeLists.txt  package.xml  setup.cfg  setup.py
src/subsystems/drive/drive_bringup/config/: athena_drive_controllers.yaml  test_goal_publishers_config.yaml
src/subsystems/drive/drive_bringup/launch/: athena_drive.launch.py  controllers.launch.py  hardware.launch.py  robot_description.launch.py  teleop.launch.py  test_forward_position_controller.launch.py  visualization.launch.py
src/subsystems/drive/drive_bringup/scripts/: twist_stamper.py
src/subsystems/science/science_bringup/: CMakeLists.txt
src/subsystems/science/science_bringup/config/: athena_science_controllers.yaml  science_controllers.yaml
subsystems/arm/arm_bringup/: CMakeLists.txt  package.xml
subsystems/arm/arm_bringup/config/: athena_arm_controllers.yaml
subsystems/arm/arm_bringup/launch/: athena_arm.launch.py
subsystems/arm/arm_controllers/: CMakeLists.txt  package.xml
subsystems/arm/arm_controllers/src/: manual_arm_cylindrical_controller.cpp  manual_arm_joint_by_joint_controller.cpp
subsystems/arm/arm_controllers/test/: test_load_manual_arm_cylindrical_controller.cpp  test_load_manual_arm_joint_by_joint_controller.cpp  test_manual_arm_cylindrical_controller.cpp  test_manual_arm_cylindrical_controller.hpp  test_manual_arm_cylindrical_controller_preceeding.cpp  test_manual_arm_joint_by_joint_controller.cpp  test_manual_arm_joint_by_joint_controller.hpp  test_manual_arm_joint_by_joint_controller_preceeding.cpp
subsystems/arm/arm_moveit/: .setup_assistant  CMakeLists.txt  package.xml
subsystems/arm/arm_moveit/config/: kinematics.yaml
subsystems/arm/arm_moveit/launch/: athena_arm_moveit.launch.py
subsystems/drive/drive_bringup/: CMakeLists.txt  package.xml
subsystems/drive/drive_bringup/config/: athena_drive_controllers.yaml
subsystems/drive/drive_bringup/launch/: athena_drive.launch.py  test_forward_position_controller.launch.py
subsystems/drive/drive_controllers/: CMakeLists.txt  package.xml
subsystems/drive/drive_controllers/src/: crab_steering_controller.cpp  double_ackermann_controller.cpp  single_ackermann_controller.cpp  swerve_drive_controller.cpp
subsystems/drive/drive_controllers/test/: test_double_ackermann_controller.cpp  test_double_ackermann_controller.hpp  test_double_ackermann_controller_preceeding.cpp  test_load_double_ackermann_controller.cpp  test_load_swerve_drive_controller.cpp  test_swerve_drive_controller.cpp  test_swerve_drive_controller.hpp  test_swerve_drive_controller_preceeding.cpp
subsystems/navigation/gps/: CMakeLists.txt  package.xml
subsystems/science/science_bringup/: CMakeLists.txt  package.xml
subsystems/science/science_bringup/config/: athena_science_controllers.yaml
subsystems/science/science_bringup/launch/: athena_science.launch.py  test_forward_position_controller.launch.py
subsystems/science/science_bringup/scripts/: controller_switcher.py
subsystems/science/science_controllers/: CMakeLists.txt  package.xml
subsystems/science/science_controllers/src/: athena_science_manual.cpp
subsystems/science/science_controllers/test/: test_athena_science_manual.cpp  test_athena_science_manual.hpp  test_athena_science_manual_preceeding.cpp  test_load_athena_science_manual.cpp
(+65 files in other folders)
