<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>bringup</name>
  <version>0.1.0</version>
  <description>Top-level bringup package for the entire robot system</description>
  <maintainer email="todo@example.com">Maintainer</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>arm_bringup</exec_depend>
  <exec_depend>drive_bringup</exec_depend>
  <exec_depend>science_bringup</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
