<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>talon_ros2_control</name>
  <version>0.0.0</version>
  <description>UMDLoop's ros2_control hardware interface for the TALON motors</description>
  <maintainer email="duttaishan01@gmail.com">duttaishan01</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <build_depend>ament_cmake</build_depend>

  <depend>hardware_interface</depend>
  <depend>pluginlib</depend>
  
  <depend>rclcpp</depend>
  <depend>rclcpp_lifecycle</depend>
  <depend>realtime_tools</depend>

  <depend>CTRE_Phoenix</depend>
  <depend>CTRE_PhoenixCCI</depend>
  <depend>CTRE_PhoenixTools</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <exec_depend>ament_cmake</exec_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  
  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
