<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>description</name>
  <version>1.0.0</version>
  <description>
    <p>URDF Description package for athena_arm</p>
    <p>This package contains configuration data, 3D models and launch files for athena_arm robot</p>
  </description>
  <author>Ishan Dutta</author>
  <maintainer email="duttaishan01@gmail.com" />
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <build_depend>ament_cmake</build_depend>

  <depend>controller_manager</depend>
  <depend>rclcpp</depend>
  <depend>ros2launch</depend>
  <depend>robot_state_publisher</depend>
  <depend>rviz2</depend>
  <depend>joint_state_publisher_gui</depend>
  <depend>joint_state_broadcaster</depend>

  <exec_depend>launch_ros</exec_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>urdf</exec_depend>
  <exec_depend>xacro</exec_depend>


  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>