<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
    <name>drive_bringup</name>
    <version>0.0.0</version>
    <description>Athena</description>
    <maintainer email="duttaishan01@gmail.com">Ishan Dutta</maintainer>
    <license>Apache-2.0</license>

    <depend>hardware_interface</depend>
    <exec_depend>controller_manager</exec_depend>
    <exec_depend>forward_command_controller</exec_depend>
    <exec_depend>joint_state_broadcaster</exec_depend>
    <exec_depend>ackermann_steering_controller</exec_depend>
    <exec_depend>robot_state_publisher</exec_depend>
    <exec_depend>ros2_controllers_test_nodes</exec_depend>
    <exec_depend>teleop_twist_joy</exec_depend>
    <exec_depend>rviz2</exec_depend>
    <exec_depend>xacro</exec_depend>
    <exec_depend>rosidl_default_runtime</exec_depend>
    <exec_depend>builtin_interfaces</exec_depend>
    <exec_depend>description</exec_depend>
    <depend>gz_ros2_control</depend>
    <depend>ros2_control</depend>
    <depend>ros2_controllers</depend>
    <build_depend>builtin_interfaces</build_depend>
    <depend>teleop</depend>
    <build_depend>python3-pygame</build_depend>
    <exec_depend>python3-pygame</exec_depend>
    <exec_depend>simulation</exec_depend>
    <depend>drive_controllers</depend>

    <export>
        <build_type>ament_python</build_type>
    </export>
</package>
